# automation

./: pyproject.toml
automation/: automation.py
tests/: test_automation.py
